--- a/1-Map.ipynb
+++ b/1-Map.ipynb
@@ -11,12 +11,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:blue\">Start Position</span>\n",
+    "<span style=\"color:red\">Start Position</span>\n",
     "<br>\n",
-    "<span style=\"color:red\">Current Position</span>\n",
+    "<span style=\"color:blue\">Current Position</span>\n",
     "<br>\n",
     "<span style=\"color:green\">Target Position</span>\n",
-    "<br>"
+    "<br>\n",
+    "\n",
+    "\n",
+    "    BLACK = '\\033[30m'\n",
+    "    RED = '\\033[31m'\n",
+    "    GREEN = '\\033[32m'\n",
+    "    YELLOW = '\\033[33m'\n",
+    "    BLUE = '\\033[34m'\n",
+    "    MAGENTA = '\\033[35m'\n",
+    "    CYAN = '\\033[36m'\n",
+    "    WHITE = '\\033[37m'\n",
+    "    UNDERLINE = '\\033[4m'\n",
+    "    RESET = '\\033[0m'"
    ]
   },
   {
@@ -28,24 +40,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class cursor():\n",
+    "class Cursor():\n",
+    "    map = None\n",
     "    \"\"\"\n",
     "    Pos: Array coordinates \n",
-    "    State: standing, \n",
+    "    State: standing, lying horizontally, and lying vertically\n",
+    "           st, lh and lv\n",
     "    \"\"\"\n",
     "    def __init__(self, pos, state):\n",
     "        self.pos = pos\n",
     "        self.state = state\n",
-    "    def "
+    "        \n",
+    "    def right(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def left(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def up(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def down(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def is_valid_pos(self):\n",
+    "        pass\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +82,19 @@
     "    grid = None\n",
     "    schema = None\n",
     "    cursor = None\n",
-    "    def __init__(self, schema:'list[list]', start_pos=None, target_pos=None, current_pos=None):\n",
+    "    def __init__(self, schema:'list[list]', start_pos=None, target_pos=None):\n",
     "        self.schema = schema\n",
-    "        self.create_grid()\n",
     "        self.start_pos = start_pos\n",
     "        self.target_pos = target_pos\n",
-    "        self.current_pos = current_pos\n",
-    "        \n",
-    "    def create_grid(self):\n",
+    "        self.init_grid()\n",
+    "            \n",
+    "    def init_cursor(self, current_pos=None, state='st'):\n",
+    "        if current_pos is None:\n",
+    "            current_pos = self.start_pos\n",
+    "        self.cursor = Cursor(current_pos, state)\n",
+    "        self.map = self\n",
+    "    \n",
+    "    def init_grid(self):\n",
     "        self.rows = len(schema)\n",
     "        self.cols = 0\n",
     "        for r in self.schema:\n",
@@ -75,16 +109,7 @@
     "        \n",
     "    def plot(self):\n",
     "        print(f'-- Map Plot {self.rows}X{self.cols}')\n",
-    "#         for row in self.grid:\n",
-    "#             print('')\n",
-    "#             for x in row:\n",
-    "#                 if x:\n",
-    "#                     col = \"| |\"\n",
-    "#                 else:\n",
-    "#                     col = \"   \"\n",
-    "#                 print(col, end='')\n",
     "        for r in range(self.rows):\n",
-    "#             print('\\n', r)\n",
     "            print('')\n",
     "            # Top\n",
     "            for c in range(self.cols):\n",
@@ -96,17 +121,25 @@
     "                    col = '  '\n",
     "                print(col, end='')\n",
     "            print('')\n",
-    "            # Middle\n",
+    "            # Middle|\n",
     "            for c in range(self.cols):\n",
     "                if self.grid[r][c]:\n",
     "                    col = '|'\n",
-    "                elif r<self.rows-1 and self.grid[r+1][c]:\n",
-    "                    col = '|'\n",
     "                else:\n",
     "                    col = ' '\n",
+    "                empty = True\n",
     "                if self.cursor is not None:\n",
-    "                    pass\n",
-    "                else:\n",
+    "                    if self.cursor.pos == [r,c]:\n",
+    "                        col+='\\033[34mX\\033[0m'\n",
+    "                        empty= False\n",
+    "                if empty:\n",
+    "                    if self.start_pos == [r, c]:\n",
+    "                        col+='\\033[31mX\\033[0m'\n",
+    "                        empty= False\n",
+    "                    elif self.target_pos == [r, c]:\n",
+    "                        col+='\\033[32mX\\033[0m'\n",
+    "                        empty= False\n",
+    "                if empty:\n",
     "                    col+=' '\n",
     "                print(col, end='')\n",
     "            # End\n",
@@ -129,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,16 +175,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = Map(schema)"
+    "m = Map(schema, [0,1], [2,6])\n",
+    "m.init_cursor([0, 1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1]"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.start_pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +216,7 @@
        " [False, False, False, True, True, True, True, True, False, False]]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 268,
    "metadata": {
     "scrolled": true
    },
@@ -185,11 +239,11 @@
       "-- Map Plot 3X10\n",
       "\n",
       "+ + + + + + + + + + \n",
-      "| | | | | | | | | | \n",
+      "| |\u001b[34mX\u001b[0m| | | | | | | | \n",
       "+ + + + + + + + + + \n",
-      "      | | | | | |   \n",
+      "          | | | |   \n",
       "      + + + + + +   \n",
-      "      | | | | |     \n",
+      "      | | | |\u001b[32mX\u001b[0m|     \n",
       "      + + + + +     "
      ]
     }
@@ -200,20 +254,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mX\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('\\033[31mX')"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
