--- a/1-Map.ipynb
+++ b/1-Map.ipynb
@@ -40,9 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 443,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-443-b80b46de6d00>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-443-b80b46de6d00>\"\u001b[1;36m, line \u001b[1;32m14\u001b[0m\n\u001b[1;33m    self.\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class Cursor():\n",
     "    map = None\n",
@@ -54,9 +63,29 @@
     "    def __init__(self, pos, state):\n",
     "        self.pos = pos\n",
     "        self.state = state\n",
+    "    \n",
+    "    def backup_state(self):\n",
+    "        self._state = self.state\n",
+    "        self._pos = self.pos\n",
+    "    \n",
+    "    def restore_state(self):\n",
+    "        self.state = self._state\n",
+    "        self.pos = self._pos\n",
+    "            \n",
+    "    def apply_state(self, pos, state):\n",
+    "        self.backup_state()\n",
+    "        self.assert_valid_pos(pos, state)\n",
+    "        self.pos = pos\n",
+    "        self.state = state\n",
     "        \n",
+    "    def calculate_state(self, direction):\n",
+    "        if direction='right':\n",
+    "            \n",
+    "    \n",
     "    def right(self):\n",
-    "        pass\n",
+    "        pos, state = self.calculate_state('right')\n",
+    "        self.apply_state(pos, state)\n",
+    "        \n",
     "    \n",
     "    def left(self):\n",
     "        pass\n",
@@ -67,14 +96,24 @@
     "    def down(self):\n",
     "        pass\n",
     "    \n",
-    "    def is_valid_pos(self):\n",
-    "        pass\n",
-    "    "
+    "    def assert_valid_pos(self):\n",
+    "        if not self.map.allow_invalid_pos:\n",
+    "            assert self.is_valid_pos()==True\n",
+    "    \n",
+    "    def is_valid_pos(self, pos=None, state=None):\n",
+    "        if pos is None:\n",
+    "            pos = self.pos\n",
+    "        if type(pos[0]) is list:\n",
+    "            return self.map.grid[pos[0][0], pos[1]] and self.map.grid[pos[0][1], pos[1]]\n",
+    "        elif type(pos[1]) is list:\n",
+    "            return self.map.grid[pos[0], pos[1][0]] and self.map.grid[pos[0], pos[1][1]]\n",
+    "        return self.map.grid[pos[0], pos[1]]\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +121,7 @@
     "    grid = None\n",
     "    schema = None\n",
     "    cursor = None\n",
+    "    allow_invalid_pos = False\n",
     "    def __init__(self, schema:'list[list]', start_pos=None, target_pos=None):\n",
     "        self.schema = schema\n",
     "        self.start_pos = start_pos\n",
@@ -109,8 +149,12 @@
     "        \n",
     "    def plot(self):\n",
     "        print(f'-- Map Plot {self.rows}X{self.cols}')\n",
+    "        print('\\n    ', end='')\n",
+    "        for i in range(self.cols):\n",
+    "            print(i, end=' ')\n",
+    "        print(' ')\n",
     "        for r in range(self.rows):\n",
-    "            print('')\n",
+    "            print(('   '+str(r))[-3:], end=' ')\n",
     "            # Top\n",
     "            for c in range(self.cols):\n",
     "                if self.grid[r][c]:\n",
@@ -121,6 +165,7 @@
     "                    col = '  '\n",
     "                print(col, end='')\n",
     "            print('')\n",
+    "            print('   ', end=' ')\n",
     "            # Middle|\n",
     "            for c in range(self.cols):\n",
     "                if self.grid[r][c]:\n",
@@ -129,9 +174,19 @@
     "                    col = ' '\n",
     "                empty = True\n",
     "                if self.cursor is not None:\n",
-    "                    if self.cursor.pos == [r,c]:\n",
+    "                    pos = self.cursor.pos\n",
+    "                    if pos == [r,c]: # st\n",
     "                        col+='\\033[34mX\\033[0m'\n",
     "                        empty= False\n",
+    "                    elif self.cursor.state == 'lv':\n",
+    "                        if ([pos[0][0], pos[1]]==[r,c]) or ([pos[0][1], pos[1]]==[r,c]):\n",
+    "                            col+='\\033[34mX\\033[0m'\n",
+    "                            empty= False                    \n",
+    "                    elif self.cursor.state == 'lh':\n",
+    "                        if ([pos[0], pos[1][0]]==[r,c]) or ([pos[0], pos[1][1]]==[r,c]): # lh\n",
+    "                            col+='\\033[34mX\\033[0m'\n",
+    "                            empty= False\n",
+    "                #\n",
     "                if empty:\n",
     "                    if self.start_pos == [r, c]:\n",
     "                        col+='\\033[31mX\\033[0m'\n",
@@ -145,12 +200,14 @@
     "            # End\n",
     "            if r>=self.rows-1:\n",
     "                print('')\n",
+    "                print('   ', end=' ')\n",
     "                for c in range(self.cols):\n",
     "                    if self.grid[r][c]:\n",
     "                        col = '+ '\n",
     "                    else:\n",
     "                        col = '  '\n",
-    "                    print(col, end='')"
+    "                    print(col, end='')\n",
+    "            print('')"
    ]
   },
   {
@@ -162,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,17 +232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [],
    "source": [
     "m = Map(schema, [0,1], [2,6])\n",
-    "m.init_cursor([0, 1])"
+    "m.init_cursor([0, 0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +251,7 @@
        "[0, 1]"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 452,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +273,7 @@
        " [False, False, False, True, True, True, True, True, False, False]]"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 453,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 454,
    "metadata": {
     "scrolled": true
    },
@@ -238,13 +295,94 @@
      "text": [
       "-- Map Plot 3X10\n",
       "\n",
-      "+ + + + + + + + + + \n",
-      "| |\u001b[34mX\u001b[0m| | | | | | | | \n",
-      "+ + + + + + + + + + \n",
-      "          | | | |   \n",
-      "      + + + + + +   \n",
-      "      | | | |\u001b[32mX\u001b[0m|     \n",
-      "      + + + + +     "
+      "    0 1 2 3 4 5 6 7 8 9  \n",
+      "  0 + + + + + + + + + + \n",
+      "    |\u001b[34mX\u001b[0m|\u001b[31mX\u001b[0m| | | | | | | | \n",
+      "  1 + + + + + + + + + + \n",
+      "              | | | |   \n",
+      "  2       + + + + + +   \n",
+      "          | | | |\u001b[32mX\u001b[0m|     \n",
+      "          + + + + +     \n"
+     ]
+    }
+   ],
+   "source": [
+    "m.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 456,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur = m.cursor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 458,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0]"
+      ]
+     },
+     "execution_count": 458,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 469,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.pos = [0,[5, 6]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 470,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.state = 'lh'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 471,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Map Plot 3X10\n",
+      "\n",
+      "    0 1 2 3 4 5 6 7 8 9  \n",
+      "  0 + + + + + + + + + + \n",
+      "    | |\u001b[31mX\u001b[0m| | | |\u001b[34mX\u001b[0m|\u001b[34mX\u001b[0m| | | \n",
+      "  1 + + + + + + + + + + \n",
+      "              | | | |   \n",
+      "  2       + + + + + +   \n",
+      "          | | | |\u001b[32mX\u001b[0m|     \n",
+      "          + + + + +     \n"
      ]
     }
    ],
@@ -268,10 +406,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 442,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 442,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True and False"
+   ]
   },
   {
    "cell_type": "code",
